# COMP2209

./: A6 Chess.hs  A6 Stack Machine.hs  A7 Stack Machine.hs  Assessed Exercises A6.txt  a4_chess.hs  a5_chess.hs  ex1.hs  ex2.hs  ex4.hs  ex5.hs
Haskel_CW/: Q1.hs  Q2.hs  Q3.hs  Q4.hs  Q5.hs  Q6.hs  Tests.hs  container.cabal
Haskel_CW/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskel_CW/dist-newstyle/packagedb/ghc-9.4.8/: haskell-cw-0.1.0.0-inplace.conf  package.cache
Practice/: a4_chess.hs  ex1.hs  ex3.hs  ex5.hs  exam.hs
